# NeuralDMD

./: README.md  dmd_data_loader.py  neural_dmd.py  pyproject.toml  requirements.txt  util_funcs.py
neuraldmd/: __init__.py  activations.py  encoding.py  losses.py  model.py  scheduler.py  training.py
neuraldmd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tutorial/: generate_data.ipynb  orbiting_hs.ipynb  test_model.ipynb  train_model.ipynb  train_model.py
tutorial/black_hole_imaging/: generate_data.ipynb  test_model.ipynb  train_model.py
tutorial/black_hole_imaging/checkpoints/: e0.eqx  e10.eqx  e100.eqx  e1000.eqx  e1010.eqx  e1020.eqx  e1030.eqx  e1040.eqx  e1050.eqx  e1060.eqx  e1070.eqx  e1080.eqx  e1090.eqx  e110.eqx  e1100.eqx  e1110.eqx  e1120.eqx  e1130.eqx  e1140.eqx  e1150.eqx  e1160.eqx  e1170.eqx  e1180.eqx  e1190.eqx  e120.eqx  e1200.eqx  e1210.eqx  e1220.eqx  e1230.eqx  e1240.eqx  e1250.eqx  e1260.eqx  e1270.eqx  e1280.eqx  e1290.eqx  e130.eqx  e1300.eqx  e1310.eqx  e1320.eqx  e1330.eqx  (+266 more)
tutorial/models/: trained_model.eqx
tutorial/weather_data_assimilation/: test_model.py  train_model.py
